--- a/app/src/main/res/layout/activity_detail_recipe.xml
+++ b/app/src/main/res/layout/activity_detail_recipe.xml
@@ -30,7 +30,8 @@
                 <ImageView
                     android:id="@+id/recipe_image"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/recipe_image_height"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     app:imageUrl="@{meal.strMealThumb}" />
 
